<resources>
    <string name="app_name">Liar\'s Dice</string>
    <string name="round">Round</string>
    <string name="computer_dice">Computer\'s Dice</string>
    <string name="user_dice">Your Dice</string>
    <string name="shake_button">Shake Dice</string>
    <string name="question_mark">\?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="guess_button">Guess</string>
    <string name="face">Face</string>
    <string name="total_number">Total Number</string>
    <string name="ok_button">Ok</string>
</resources>
